# MBU_SolteqTand_Shared_Components

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: check_version_number.yml  publish_to_pypi.yml
mbu_process_dashboard_shared_components/database/: db_handler.py
mbu_solteqtand_shared_components/application/: appointment.py  base_ui.py  clinic.py  document.py  edi_portal.py  event.py  journal_note.py  patient.py
mbu_solteqtand_shared_components/database/: db_handler.py
