[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbu_solteqtand_shared_components"   # 👈 must match the PyPI project name
version = "1.0.3"
authors = [
  { name="MBU", email="rpa@mbu.aarhus.dk" },
]
description = "Repo containing functionality related to the process dashboard"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
license = "MIT"
dependencies = [
  "cryptography >= 43.0.0",
  "pyodbc >= 5.1.0",
  "python-dateutil == 2.9.*",
  "dotenv",
]

[project.optional-dependencies]
application = [
  "uiautomation",
  "psutil",
  "docx2pdf",]

database = [
  "pyodbc >= 5.1.0",
]